--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 #bgpicture{
-  background-image: url("fizzbuzz_numbers.jpg");
+  background-image: url("../img/bg.jpg");
 }
 
 h1, h3{
@@ -42,12 +42,13 @@ input[type="button"]:hover {
 
 .box {
   background-color: #F11FE4;
+  border-style: solid;
   font-weight: bold;
   border: 50px;
   font-family: "Times New Roman", Georgia, Serif;
   font-size: 150%;
   height:400px;
-  margin:20px 10px;
+  margin:30px 10px;
   padding:20px 10px;
   width:400px;
 }
